Multiple unlearning will be down to have a good comparison

--- a/MachineUnlearning.ipynb
+++ b/MachineUnlearning.ipynb
@@ -40,7 +40,10 @@
     "import torchvision.transforms as tt\n",
     "from torchvision.models import resnet18\n",
     "\n",
-    "torch.manual_seed(100)\n",
+    "\n",
+    "train_new_one = True\n",
+    "# torch.manual_seed(100) \n",
+    "# So multiple, different models can be trained\n",
     "\n",
     "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
    ]
@@ -207,18 +210,19 @@
    ],
    "source": [
     "# Dowload the dataset\n",
-    "dataset_url = \"https://s3.amazonaws.com/fast-ai-imageclas/cifar10.tgz\"\n",
-    "download_url(dataset_url, '.')\n",
+    "if os.path.exists(\"data/cifar10\"):\n",
+    "    dataset_url = \"https://s3.amazonaws.com/fast-ai-imageclas/cifar10.tgz\"\n",
+    "    download_url(dataset_url, '.')\n",
     "\n",
-    "# Extract from archive\n",
-    "with tarfile.open('./cifar10.tgz', 'r:gz') as tar:\n",
-    "    tar.extractall(path='./data')\n",
-    "    \n",
-    "# Look into the data directory\n",
-    "data_dir = './data/cifar10'\n",
-    "print(os.listdir(data_dir))\n",
-    "classes = os.listdir(data_dir + \"/train\")\n",
-    "print(classes)"
+    "    # Extract from archive\n",
+    "    with tarfile.open('./cifar10.tgz', 'r:gz') as tar:\n",
+    "        tar.extractall(path='./data')\n",
+    "        \n",
+    "    # Look into the data directory\n",
+    "    data_dir = './data/cifar10'\n",
+    "    print(os.listdir(data_dir))\n",
+    "    classes = os.listdir(data_dir + \"/train\")\n",
+    "    print(classes)"
    ]
   },
   {
@@ -352,12 +356,13 @@
    ],
    "source": [
     "%%time\n",
-    "history = fit_one_cycle(epochs, max_lr, model, train_dl, valid_dl, \n",
-    "                             grad_clip=grad_clip, \n",
-    "                             weight_decay=weight_decay, \n",
-    "                             opt_func=opt_func)\n",
+    "if os.exists(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"):\n",
+    "    history = fit_one_cycle(epochs, max_lr, model, train_dl, valid_dl, \n",
+    "                                grad_clip=grad_clip, \n",
+    "                                weight_decay=weight_decay, \n",
+    "                                opt_func=opt_func)\n",
     "\n",
-    "torch.save(model.state_dict(), \"ResNET18_CIFAR10_ALL_CLASSES.pt\")"
+    "    torch.save(model.state_dict(), \"ResNET18_CIFAR10_ALL_CLASSES.pt\")"
    ]
   },
   {
@@ -394,9 +399,10 @@
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))\n",
-    "history = [evaluate(model, valid_dl)]\n",
-    "history"
+    "if train_new_one:\n",
+    "    model.load_state_dict(torch.load(\"ResNET18_CIFAR10_ALL_CLASSES.pt\"))\n",
+    "    history = [evaluate(model, valid_dl)]\n",
+    "    history"
    ]
   },
   {
@@ -572,28 +578,28 @@
    ],
    "source": [
     "%%time\n",
+    "if train_new_one:\n",
+    "    noises = {}\n",
+    "    for cls in classes_to_forget:\n",
+    "        print(\"Optiming loss for class {}\".format(cls))\n",
+    "        noises[cls] = Noise(batch_size, 3, 32, 32)\n",
+    "        opt = torch.optim.Adam(noises[cls].parameters(), lr = 0.1)\n",
     "\n",
-    "noises = {}\n",
-    "for cls in classes_to_forget:\n",
-    "    print(\"Optiming loss for class {}\".format(cls))\n",
-    "    noises[cls] = Noise(batch_size, 3, 32, 32)\n",
-    "    opt = torch.optim.Adam(noises[cls].parameters(), lr = 0.1)\n",
-    "\n",
-    "    num_epochs = 5\n",
-    "    num_steps = 8\n",
-    "    class_label = cls\n",
-    "    for epoch in range(num_epochs):\n",
-    "        total_loss = []\n",
-    "        for batch in range(num_steps):\n",
-    "            inputs = noises[cls]()\n",
-    "            labels = torch.zeros(batch_size)+class_label\n",
-    "            outputs = model(inputs)\n",
-    "            loss = -F.cross_entropy(outputs, labels.long()) + 0.1*torch.mean(torch.sum(torch.square(inputs), [1, 2, 3]))\n",
-    "            opt.zero_grad()\n",
-    "            loss.backward()\n",
-    "            opt.step()\n",
-    "            total_loss.append(loss.cpu().detach().numpy())\n",
-    "        print(\"Loss: {}\".format(np.mean(total_loss)))"
+    "        num_epochs = 5\n",
+    "        num_steps = 8\n",
+    "        class_label = cls\n",
+    "        for epoch in range(num_epochs):\n",
+    "            total_loss = []\n",
+    "            for batch in range(num_steps):\n",
+    "                inputs = noises[cls]()\n",
+    "                labels = torch.zeros(batch_size)+class_label\n",
+    "                outputs = model(inputs)\n",
+    "                loss = -F.cross_entropy(outputs, labels.long()) + 0.1*torch.mean(torch.sum(torch.square(inputs), [1, 2, 3]))\n",
+    "                opt.zero_grad()\n",
+    "                loss.backward()\n",
+    "                opt.step()\n",
+    "                total_loss.append(loss.cpu().detach().numpy())\n",
+    "            print(\"Loss: {}\".format(np.mean(total_loss)))"
    ]
   },
   {
@@ -647,30 +653,29 @@
     "noisy_data += other_samples\n",
     "noisy_loader = torch.utils.data.DataLoader(noisy_data, batch_size=256, shuffle = True)\n",
     "\n",
+    "if train_new_one:\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr = 0.02)\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr = 0.02)\n",
+    "    for epoch in range(1):  \n",
+    "        model.train(True)\n",
+    "        running_loss = 0.0\n",
+    "        running_acc = 0\n",
+    "        for i, data in enumerate(noisy_loader):\n",
+    "            inputs, labels = data\n",
+    "            inputs, labels = inputs,torch.tensor(labels)\n",
     "\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = F.cross_entropy(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "\n",
-    "for epoch in range(1):  \n",
-    "    model.train(True)\n",
-    "    running_loss = 0.0\n",
-    "    running_acc = 0\n",
-    "    for i, data in enumerate(noisy_loader):\n",
-    "        inputs, labels = data\n",
-    "        inputs, labels = inputs,torch.tensor(labels)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = F.cross_entropy(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        # print statistics\n",
-    "        running_loss += loss.item() * inputs.size(0)\n",
-    "        out = torch.argmax(outputs.detach(),dim=1)\n",
-    "        assert out.shape==labels.shape\n",
-    "        running_acc += (labels==out).sum().item()\n",
-    "    print(f\"Train loss {epoch+1}: {running_loss/len(train_ds)},Train Acc:{running_acc*100/len(train_ds)}%\")"
+    "            # print statistics\n",
+    "            running_loss += loss.item() * inputs.size(0)\n",
+    "            out = torch.argmax(outputs.detach(),dim=1)\n",
+    "            assert out.shape==labels.shape\n",
+    "            running_acc += (labels==out).sum().item()\n",
+    "        print(f\"Train loss {epoch+1}: {running_loss/len(train_ds)},Train Acc:{running_acc*100/len(train_ds)}%\")"
    ]
   },
   {
@@ -701,15 +706,16 @@
     }
    ],
    "source": [
-    "print(\"Performance of Standard Forget Model on Forget Class\")\n",
-    "history = [evaluate(model, forget_valid_dl)]\n",
-    "print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
-    "print(\"Loss: {}\".format(history[0][\"Loss\"]))\n",
+    "if train_new_one:\n",
+    "    print(\"Performance of Standard Forget Model on Forget Class\")\n",
+    "    history = [evaluate(model, forget_valid_dl)]\n",
+    "    print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
+    "    print(\"Loss: {}\".format(history[0][\"Loss\"]))\n",
     "\n",
-    "print(\"Performance of Standard Forget Model on Retain Class\")\n",
-    "history = [evaluate(model, retain_valid_dl)]\n",
-    "print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
-    "print(\"Loss: {}\".format(history[0][\"Loss\"]))"
+    "    print(\"Performance of Standard Forget Model on Retain Class\")\n",
+    "    history = [evaluate(model, retain_valid_dl)]\n",
+    "    print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
+    "    print(\"Loss: {}\".format(history[0][\"Loss\"]))"
    ]
   },
   {
@@ -748,29 +754,29 @@
     "\n",
     "heal_loader = torch.utils.data.DataLoader(other_samples, batch_size=256, shuffle = True)\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr = 0.01)\n",
+    "if train_new_one:\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr = 0.01)\n",
     "\n",
+    "    for epoch in range(1):  \n",
+    "        model.train(True)\n",
+    "        running_loss = 0.0\n",
+    "        running_acc = 0\n",
+    "        for i, data in enumerate(heal_loader):\n",
+    "            inputs, labels = data\n",
+    "            inputs, labels = inputs,torch.tensor(labels)\n",
     "\n",
-    "for epoch in range(1):  \n",
-    "    model.train(True)\n",
-    "    running_loss = 0.0\n",
-    "    running_acc = 0\n",
-    "    for i, data in enumerate(heal_loader):\n",
-    "        inputs, labels = data\n",
-    "        inputs, labels = inputs,torch.tensor(labels)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = F.cross_entropy(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = F.cross_entropy(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        # print statistics\n",
-    "        running_loss += loss.item() * inputs.size(0)\n",
-    "        out = torch.argmax(outputs.detach(),dim=1)\n",
-    "        assert out.shape==labels.shape\n",
-    "        running_acc += (labels==out).sum().item()\n",
-    "    print(f\"Train loss {epoch+1}: {running_loss/len(train_ds)},Train Acc:{running_acc*100/len(train_ds)}%\")"
+    "            # print statistics\n",
+    "            running_loss += loss.item() * inputs.size(0)\n",
+    "            out = torch.argmax(outputs.detach(),dim=1)\n",
+    "            assert out.shape==labels.shape\n",
+    "            running_acc += (labels==out).sum().item()\n",
+    "        print(f\"Train loss {epoch+1}: {running_loss/len(train_ds)},Train Acc:{running_acc*100/len(train_ds)}%\")"
    ]
   },
   {
@@ -801,16 +807,64 @@
     }
    ],
    "source": [
-    "print(\"Performance of Standard Forget Model on Forget Class\")\n",
-    "history = [evaluate(model, forget_valid_dl)]\n",
-    "print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
-    "print(\"Loss: {}\".format(history[0][\"Loss\"]))\n",
+    "if train_new_one:\n",
+    "    print(\"Performance of Standard Forget Model on Forget Class\")\n",
+    "    history = [evaluate(model, forget_valid_dl)]\n",
+    "    print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
+    "    print(\"Loss: {}\".format(history[0][\"Loss\"]))\n",
     "\n",
-    "print(\"Performance of Standard Forget Model on Retain Class\")\n",
-    "history = [evaluate(model, retain_valid_dl)]\n",
-    "print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
-    "print(\"Loss: {}\".format(history[0][\"Loss\"]))"
+    "    print(\"Performance of Standard Forget Model on Retain Class\")\n",
+    "    history = [evaluate(model, retain_valid_dl)]\n",
+    "    print(\"Accuracy: {}\".format(history[0][\"Acc\"]*100))\n",
+    "    print(\"Loss: {}\".format(history[0][\"Loss\"]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc317073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Dict\n",
+    "\n",
+    "def load_models_dict(path: str=\"data/paper/models\") -> Dict[str, torch.nn.Module]:\n",
+    "    \n",
+    "    model = resnet18(num_classes = 10).to(DEVICE = DEVICE)\n",
+    "    \n",
+    "    # load all the models\n",
+    "    md = {}\n",
+    "    for list in os.listdir(path):\n",
+    "        \n",
+    "        model.load_state_dict(torch.load(f=os.path.join(path, list), weights_only=True))\n",
+    "        model.eval()\n",
+    "        md[len(md)] = model\n",
+    "\n",
+    "    return md\n",
+    "\n",
+    "# Save the model\n",
+    "if not os.path.exists(\"data/paper/models\"):\n",
+    "    os.makedirs(\"data/paper/models\")\n",
+    "n = len(os.listdir(\"data/paper/models\"))\n",
+    "torch.save(model.state_dict(), f\"data/paper/models/ResNET18_CIFAR10_UN_{n}.pt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cda9a304",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "## Evaluate multiple models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a557a93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
