Trials are working

--- a/MachineUnlearningProposal.ipynb
+++ b/MachineUnlearningProposal.ipynb
@@ -12,10 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4e828435",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda:0'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import required libraries\n",
     "import numpy as np\n",
@@ -36,7 +47,8 @@
     "train_new_one = False\n",
     "# torch.manual_seed(100)\n",
     "# After I optimize the Hyperparameters, I want to calculate at least 30 models, to chech the average performance\n",
-    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
+    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "DEVICE"
    ]
   },
   {
@@ -1022,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
