--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -21,9 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda:0'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from src.fyemu_tunable import main\n",
     "import torch\n",
@@ -36,7 +47,8 @@
     "\n",
     "from src.metrics import kl_divergence_between_models\n",
     "\n",
-    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
+    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "DEVICE"
    ]
   },
   {
@@ -50,22 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2025-01-08 10:19:07,648] Using an existing study with name 'GeneratorOpti' instead of creating a new one.\n"
+      "[I 2025-01-08 16:17:28,731] Using an existing study with name 'GeneratorOpti' instead of creating a new one.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using an existing study with name 'GeneratorOpti' instead of creating a new one.\n",
-      "Using an existing study with name 'GeneratorOpti' instead of creating a new one.\n",
       "Using an existing study with name 'GeneratorOpti' instead of creating a new one.\n"
      ]
     }
@@ -90,9 +100,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test', 'train']\n",
+      "['bird', 'deer', 'horse', 'automobile', 'frog', 'airplane', 'truck', 'cat', 'dog', 'ship']\n",
+      "---Optimizing noise generator---\n",
+      "Optiming loss for class 0\n",
+      "Loss: 29792.333984375\n",
+      "Optiming loss for class 2\n",
+      "Loss: 27015.048828125\n",
+      "---Impairing Phase---\n",
+      "Train loss 1: 0.27970622943401335,Train Acc:7.226%\n",
+      "---Repairing Phase---\n",
+      "Train loss 1: 0.1922396828842163,Train Acc:8.89%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-01-08 16:24:51,959] Trial 18 finished with value: 1.0176325000000002 and parameters: {'opt_Epochs': 1, 'opt_Steps': 6, 'opt_Learning_Rate': 0.2680704973016399, 'opt_Batch_Size': 62, 'opt_Number_of_Noise_Batches': 7, 'opt_Regularization_term': 0.08390319860762938, 'opt_Noise_Dim': 35, 'l1': 578, 'l2': 554, 'l3': 42, 'l4': 910, 'l5': 118, 'l6': 184, 'l7': 552, 'n_layers': 4}. Best is trial 18 with value: 1.0176325000000002.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 18 finished with value: 1.0176325000000002 and parameters: {'opt_Epochs': 1, 'opt_Steps': 6, 'opt_Learning_Rate': 0.2680704973016399, 'opt_Batch_Size': 62, 'opt_Number_of_Noise_Batches': 7, 'opt_Regularization_term': 0.08390319860762938, 'opt_Noise_Dim': 35, 'l1': 578, 'l2': 554, 'l3': 42, 'l4': 910, 'l5': 118, 'l6': 184, 'l7': 552, 'n_layers': 4}. Best is trial 18 with value: 1.0176325000000002.\n",
+      "['test', 'train']\n",
+      "['bird', 'deer', 'horse', 'automobile', 'frog', 'airplane', 'truck', 'cat', 'dog', 'ship']\n",
+      "---Optimizing noise generator---\n",
+      "Optiming loss for class 0\n",
+      "Loss: 1451.13330078125\n",
+      "Loss: 2801.881103515625\n",
+      "Loss: 2020.166259765625\n",
+      "Optiming loss for class 2\n",
+      "Loss: 1320.646728515625\n",
+      "Loss: 2591.4091796875\n",
+      "Loss: 1889.7562255859375\n",
+      "---Impairing Phase---\n"
+     ]
+    }
+   ],
    "source": [
     "def objective(trial):\n",
     "\n",
@@ -129,7 +183,7 @@
     "        t_Layers = Layers,\n",
     "        t_Noise_Dim = opt_Noise_Dim,\n",
     "        new_baseline=False,\n",
-    "        logs=False,\n",
+    "        logs=True,\n",
     "        model_eval_logs=False,\n",
     "    )\n",
     "    \n",
@@ -143,7 +197,7 @@
     "    valid_ds = ImageFolder(data_dir+f'{os.sep}test', transform_test)\n",
     "    valid_dl = DataLoader(valid_ds, 256,)\n",
     "\n",
-    "    exact = resnet18(num_classes = 10).to(DEVICE)\n",
+    "    exact = resnet18(num_classes = 10)\n",
     "    exact.load_state_dict(torch.load(\"ResNET18_CIFAR10_RETAIN_CLASSES.pt\", weights_only=True))\n",
     "    div = kl_divergence_between_models(\n",
     "        model1 = mod,\n",
@@ -292,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
