--- a/MachineUnlearningProposal.ipynb
+++ b/MachineUnlearningProposal.ipynb
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "6c19a437",
    "metadata": {},
    "outputs": [],
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "bee59dec",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "cb5e2acb",
    "metadata": {},
    "outputs": [],
@@ -868,21 +868,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "f5c37661",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import src.metrics\n",
     "from src.fyemu_tunable import evaluate\n",
@@ -896,26 +885,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "bdd61db6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Loss': 2.209007740020752, 'Acc': 0.8007015585899353},\n",
-       " {'Loss': 3.2875797748565674, 'Acc': 0.626953125},\n",
-       " {'Loss': 0.0003270625020377338, 'Acc': 1.0},\n",
-       " {'Loss': 1.3938783407211304, 'Acc': 0.778637707233429},\n",
-       " {'Loss': 11.126469612121582, 'Acc': 0.0},\n",
-       " {'Loss': 11.099096298217773, 'Acc': 0.0}]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def run(model, loaders):\n",
     "    results = []\n",
@@ -928,19 +901,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "a5922b7a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3644528786.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[52], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    kl_divs_gen =\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "kl_divs_gen = "
    ]
@@ -963,9 +927,28 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "from typing import Dict, List, Literal\n",
     "\n",
-    "plt.boxplot(kl_divs_gen, kl_div_femu)\n",
-    "plt.show()"
+    "def create_boxplots(score_lists: Dict[str, List[float]], title: str = 'Box Plot of Accuracy Scores for Different Models', evaluation: Literal[\"Accuracy\", \"Loss\"] = \"Accuracy\") -> None:\n",
+    "    \"\"\"Create a box plot of accuracy scores for each parsed list in the diconary.\"\"\"\n",
+    "\n",
+    "    # Prepare data for the box plot\n",
+    "    data = [scores for scores in score_lists.values()]\n",
+    "    labels = list(score_lists.keys())\n",
+    "\n",
+    "    # Create the box plot\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.boxplot(data, labels=labels, patch_artist=True)\n",
+    "\n",
+    "    # Add labels and title\n",
+    "    plt.xlabel('Subsets')\n",
+    "    plt.xticks(rotation=30)\n",
+    "    plt.ylabel(f'{evaluation} Score')\n",
+    "    plt.ylim(0, 1.0)\n",
+    "    plt.title(title)\n",
+    "\n",
+    "    # Display the plot\n",
+    "    plt.show()"
    ]
   }
  ],
