--- a/MachineUnlearningProposal.ipynb
+++ b/MachineUnlearningProposal.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bee59dec",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cb5e2acb",
    "metadata": {},
    "outputs": [],
@@ -856,14 +856,14 @@
     "train_forget_dl = DataLoader(train_forget_ds, 256, shuffle=True)\n",
     "valid_forget_dl = DataLoader(train_forget_ds, 256*2)\n",
     "\n",
-    "loaders = [\n",
-    "    train_all_dl,\n",
-    "    valid_all_dl,\n",
-    "    train_retain_dl,\n",
-    "    valid_retain_dl,\n",
-    "    train_forget_dl,\n",
-    "    valid_forget_dl,\n",
-    "]"
+    "loaders = {\n",
+    "    0: train_all_dl,\n",
+    "    1: valid_all_dl,\n",
+    "    2: train_retain_dl,\n",
+    "    3: valid_retain_dl,\n",
+    "    4: train_forget_dl,\n",
+    "    5: valid_forget_dl,\n",
+    "}"
    ]
   },
   {
@@ -871,13 +871,24 @@
    "execution_count": null,
    "id": "f5c37661",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import src.metrics\n",
     "from src.fyemu_tunable import evaluate\n",
     "from torchvision.models import resnet18\n",
-    "# mu_ms = load_models_dict()\n",
-    "# femu_ms = load_models_dict()\n",
+    "paper_ms    = load_models_dict()\n",
+    "gemu_ms     = load_models_dict()\n",
     "\n",
     "exact = resnet18(num_classes = 10).to(DEVICE)\n",
     "exact.load_state_dict(torch.load(\"ResNET18_CIFAR10_RETAIN_CLASSES.pt\", weights_only=True))"
@@ -885,15 +896,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "bdd61db6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'Loss': 2.209007740020752, 'Acc': 0.8007015585899353},\n",
+       " 1: {'Loss': 3.2875797748565674, 'Acc': 0.626953125},\n",
+       " 2: {'Loss': 0.00032919179648160934, 'Acc': 1.0},\n",
+       " 3: {'Loss': 1.3938783407211304, 'Acc': 0.778637707233429},\n",
+       " 4: {'Loss': 11.077287673950195, 'Acc': 0.0},\n",
+       " 5: {'Loss': 11.099096298217773, 'Acc': 0.0}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def run(model, loaders):\n",
-    "    results = []\n",
-    "    for loader in loaders:\n",
-    "        results.append(evaluate(model, loader))\n",
+    "    results = {}\n",
+    "    for name, loader in loaders.items():\n",
+    "        results[name] = evaluate(model, loader)\n",
     "\n",
     "    return results\n",
     "run(exact, loaders)"
@@ -901,27 +928,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a5922b7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kl_divs_gen = "
+    "kl_divs_gen = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7ec23f0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kl_div_femu = "
+    "kl_div_femu = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "095208fe",
    "metadata": {},
    "outputs": [],
@@ -950,6 +977,105 @@
     "    # Display the plot\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11c7b932",
+   "metadata": {},
+   "source": [
+    "### Accuracy Per Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "47c7551a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import tarfile\n",
+    "import os\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
+    "from torchvision.datasets import ImageFolder\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "import torchvision.transforms as tt\n",
+    "\n",
+    "DEVICE = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "data_classes = {}\n",
+    "for c in classes:\n",
+    "    data_classes[c] = {}\n",
+    "    for t, l in valid_all_ds.imgs:\n",
+    "        if l == c:\n",
+    "            data_classes[c][len(data_classes[c])] = (t, l)\n",
+    "\n",
+    "data_dl_classes = {c: DataLoader(SubData(data_classes[c], transform_test), 256) for c in classes}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d4887f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'paper_ms' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m class_accs_paper \u001b[38;5;241m=\u001b[39m {c: [] \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m classes}\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx, model \u001b[38;5;129;01min\u001b[39;00m \u001b[43mpaper_ms\u001b[49m\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      3\u001b[0m     model\u001b[38;5;241m.\u001b[39meval()\n\u001b[0;32m      4\u001b[0m     accs \u001b[38;5;241m=\u001b[39m run(model, data_dl_classes)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'paper_ms' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class_accs_paper = {c: [] for c in classes}\n",
+    "for idx, model in paper_ms.items():\n",
+    "    model.eval()\n",
+    "    accs = run(model, data_dl_classes)\n",
+    "    for c, acc in accs.items():\n",
+    "        class_accs_paper[c].append(acc[c])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b73c8b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_accs_gemu = {c: [] for c in classes}\n",
+    "for idx, model in gemu_ms.items():\n",
+    "    model.eval()\n",
+    "    accs = run(model, data_dl_classes)\n",
+    "    for c, acc in accs.items():\n",
+    "        class_accs_gemu[c].append(acc[c])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83c8a7f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_boxplots(class_accs_paper, \"Box Plot of Accuracy Scores for 30 Models using FYEMU\", \"Accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30de596e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_boxplots(class_accs_gemu, \"Box Plot of Accuracy Scores for 30 Models using GEMU\", \"Accuracy\")"
+   ]
   }
  ],
  "metadata": {
@@ -968,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
